3.ingress-nk.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: votingapp-ingress-nk
  annotations:
    #kubernetes.io/ingress.class: alb - Deprecated
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    #Make sure our SSL Cert and Cluster is in same AWS Account.
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-east-2:302743383270:certificate/ac9ba963-87bb-4d0a-bf38-53a5ef5d2068'
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - "nthanniru.xyz"
    secretName: my-tls-secret-nk
  rules:
  - host: nthanniru.xyz
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vote
              port:
                number: 80
